# hgreed

./: LICENSE  README.md  hgreed.cabal  stack.yaml
src/: Greed.hs  Main.hs  Scores.hs  UI.hs
