name:                hgreed
version:             0.1.0.0
synopsis:            Haskell implementation of the `greed` game
description:         Haskell implementation of the `greed` game.
                     For more information about the original game,
                     please visit http://www.catb.org/~esr/greed/greed.html
homepage:            https://github.com/duncanguthrie/hgreed#readme
license:             BSD3
license-file:        LICENSE
author:              Duncan Guthrie
maintainer:          dguthrie@posteo.net
copyright:           Duncan Guthrie
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     
executable hgreed
  hs-source-dirs:      src
  other-modules:       Greed, Scores, UI
  ghc-options:         -threaded
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       array >= 0.5.3.0 && < 0.5.4.0,
                       base >= 4.7 && < 5,
                       brick >= 0.47 && < 0.48,
                       microlens >= 0.4.10 && < 0.5,
                       microlens-th >= 0.4.2.3 && < 0.4.3,
                       random >= 1.1 && < 1.2,
                       recursion-schemes >= 5.1 && < 5.2,
                       split >= 0.2.3.3 && < 0.2.4,
                       time >= 1.8.0.2 && < 1.8.1.0,
                       tuple >= 0.3.0.2 && < 0.3.1.0,
                       vty >= 5.25.1 && < 5.26.0
